# Ryujinx

./: libraries.sh
.github/workflows/: build_android.yml  clear-artifacts.yml
src/Ryujinx.Memory/: MemoryManagementUnix.cs
src/RyujinxAndroid/app/: build.gradle
src/RyujinxAndroid/app/src/main/cpp/: CMakeLists.txt
src/RyujinxAndroid/libryujinx/libs/: FFmpeg.cmake  OpenAL.cmake
